--- a/css/styles.css
+++ b/css/styles.css
@@ -115,11 +115,10 @@ ul {
 
 .mail-tel svg {
 	fill: var(--second-text-color);
-	height: 20px;
-	width: 20px;
+	width: 12px;
 	display: inline-block;
 	vertical-align: middle;
-	margin-right: 5px;
+	margin-right: 10px;
 }
 
 .mail-tel a:hover svg,
@@ -442,38 +441,11 @@ footer .logo {
 
 }
 
-.features-list li::before {
-	display: block;
-	content: '';
+.features-img svg {
+	width: 270px;
 	height: 120px;
 	margin-bottom: 30px;
-	background: var(--section-team-background);
-	border-radius: 4px;
-
-	background-repeat: no-repeat;
-	background-position: center;
 }
-
-.features-list li.antenna::before {
-	background-image: url(../images/antenna.svg);
-	background-size: 65.32px 70px;
-}
-
-.features-list li.clock::before {
-	background-image: url(../images/clock.svg);
-	background-size: 70px 70px;
-}
-
-.features-list li.diagram::before {
-	background-image: url(../images/diagram.svg);
-	background-size: 70px 53.69px;
-}
-
-.features-list li.astronaut::before {
-	background-image: url(../images/astronaut.svg);
-	background-size: 70px 70px;
-}
-
 
 .icon:hover .icon-blue {
 	fill: var(--accent-color);
@@ -500,12 +472,6 @@ footer .logo {
 	height: 44px;
 	fill: #AFB1B8;
 }
-
-.icon #circle {
-	stroke: red;
-}
-
-
 
 .button-icon:hover .icon {
 	fill: var(--hero-text-color);
@@ -556,21 +522,17 @@ footer .logo {
 	flex-wrap: nowrap;
 }
 
-.footer-flex>div {
-	justify-content: flex-start;
-}
-
-.footer-address {
+.footer-address-logo {
 	width: 300px;
 }
 
 .footer-contact-us {
-	margin-top: 30px;
+	margin-top: 20px;
 	color: var(--hero-text-color);
 	font-style: normal;
 	font-weight: 700;
 	font-size: 14px;
-	line-height: 16px;
+	line-height: 1.14px;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
 }
@@ -581,6 +543,10 @@ footer .logo {
 
 .button-icon:hover {
 	background-color: var(--accent-color);
+}
+
+.join {
+	margin-bottom: 20px;
 }
 
 
