--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ ul {
 	font-size: 14px;
 	line-height: 1.14;
 	letter-spacing: 0.02em;
-	display: block;
+	display: flex;
 	text-decoration: none;
 }
 
@@ -113,13 +113,23 @@ ul {
 	color: var(--accent-color);
 }
 
-.mail-tel svg {
-	fill: var(--second-text-color);
-	width: 12px;
-	display: inline-block;
+.mail-link svg {
+	fill: currentColor;
+	width: 16px;
+	height: 12px;
 	vertical-align: middle;
 	margin-right: 10px;
+	align-items: center;
 }
+
+.tel-link svg {
+	fill: currentColor;
+	width: 10px;
+	height: 16px;
+	vertical-align: middle;
+	margin-right: 10px;
+	align-items: center;
+	}
 
 .mail-tel a:hover svg,
 .mail-tel a:focus svg {
@@ -208,12 +218,7 @@ ul {
 .section-wedo li:not(:last-child) {
 	margin-right: 30px;
 }
-.portfolio-list li:hover {
-	background-image: linear-gradient(to right,
-			rgba(47, 48, 58, 0.4),
-			rgba(47, 48, 58, 0.4)),
-			url()
-}
+
 
 .portfolio-list {
 	display: flex;
@@ -228,10 +233,14 @@ ul {
 }
 
 .portfolio-list li {
-	margin-right: 30px;
+	margin-right: 29px;
 	margin-bottom: 30px;
 }
 
+.portfolio-list li:hover {
+	border: 1px solid #EEEEEE;
+	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .portfolio-title {
 	color: var(--main-text-color);
@@ -320,6 +329,7 @@ ul {
 .filter button:focus {
 	color: var(--hero-text-color);
 	background-color: var(--accent-color);
+	box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .visually-hidden {
@@ -452,8 +462,14 @@ footer .logo {
 	width: 270px;
 	height: 120px;
 	margin-bottom: 30px;
+	background-color: var(--section-team-background);
+	border-radius: 4px;
 }
 
+.antena{
+	text-align: center;
+	vertical-align: middle;
+}
 .icon:hover .icon-blue {
 	fill: var(--accent-color);
 }
@@ -462,14 +478,15 @@ footer .logo {
 	fill: var(--hero-text-color);
 }
 
-.icon:not(:last-child) {
+.icon-list li:not(:last-child) {
 	margin-right: 10px;
 }
 
-.icon-list {
+ul.icon-list {
 	text-align: center;
+	display: flex;
+	margin-left: 32px;
 	margin-top: 16px;
-
 }
 
 .icon {
@@ -478,7 +495,7 @@ footer .logo {
 	fill: #AFB1B8;
 }
 
-.button-icon:hover .icon {
+.button-icon:hover {
 	fill: var(--hero-text-color);
 }
 
@@ -494,6 +511,7 @@ footer .logo {
 
 .clients {
 	display: flex;
+	text-align: center;
 }
 
 .clients li:not(:last-child) {
@@ -511,6 +529,7 @@ footer .logo {
 
 .icon-client {
 	fill: #AFB1B8;
+	margin-top: 25px;
 }
 
 .button-clients:hover {
@@ -531,12 +550,13 @@ footer .logo {
 	width: 300px;
 }
 
-.footer-contact-us {
-	
+.footer-contact-us .button-icon {
+	background-color: rgba(255, 255, 255, 0.1);
+	fill: var(--hero-text-color);
 }
 
-.footer-contact-us .button-icon {
-	background: rgba(255, 255, 255, 0.1);
+.footer-contact-us .icon-list {
+	margin-left: 0;
 }
 
 .button-icon:hover {
