--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,8 @@ ul {
 	margin-bottom: 30px;
 }
 
-.portfolio-list li:hover {
+.portfolio-list li:hover, 
+.portfolio-list li:focus{
 	border: 1px solid #EEEEEE;
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
